# docker-agent

./: .gitignore  CMakeLists.txt  README.md  agent.json  data.go  examplestats.json  examplestats2networks.json  oldagent.json
blocks/devadaptive/docker-agent/: CMakeLists.txt  Configuration.hpp  ContainerData.hpp  HTTPClient.h  JSONMetrics.hpp  MetricData.hpp  biicode.conf  container.hpp  cpu.hpp  curl_client.hpp  dautil.cpp  dautil.hpp  docker_stats_output.json  filesystem.hpp  main.cpp  memory.hpp  network.hpp  sample.json
cmd/: docker-agent.go  main.go
main/: main.go
scratch/: main.go
server/: api_handlers.go
stats/: containers.go  cpu.go  memory.go  network.go  network_test.go
util/: conversions.go  conversions_test.go  errors.go  readers.go  readers_test.go
